style.css
* {
  font-family: "Poppins", sans-serif;
}

html {
  display: flex;
  justify-content: center;
  background: #e5e5e5;
}

body {
  width: 375px;
  background-color: #f7f7f9;
  overflow-x: hidden;
}

a,
a:link,
a:visited,
a:focus,
a:hover,
a:active {
  text-decoration: none;
  cursor: pointer;
}

header {
  background-image: url("./utils/header-background-mobile-page.svg");
  display: flex;
  flex-direction: column;
}

nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 40px 20px;
}

.my-logo {
  font-style: normal;
  font-weight: bold;
  font-size: 18px;
  line-height: 20px;
  color: #6070ff;
}

.my-logo:hover {
  opacity: 0.7;
}

.hamburger-menu {
  width: 20px;
  height: 20px;
  color: #acb7c3;
}

.hamburger-menu:hover {
  opacity: 0.7;
}

.fa-bars {
  color: #6070ff;
}

.nav-menu {
  display: none;
}

.nav-menu-link {
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
  color: #344563;
}

.nav-menu-link:hover {
  opacity: 0.7;
}

.front-section {
  background-image: url("./utils/header-shapesmobile@2x.svg");
  display: flex;
  flex-direction: column;
  margin-top: 20px;
}

.first-subsection {
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
  padding-right: 20px;
  margin: 12px 20px;
  margin-top: 100px;
}

.second-subsection {
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
  margin: 2px 20px;
}

.connect {
  width: 130px;
  height: 24px;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
  margin-left: 20px;
  margin-right: 20px;
}

.connect:hover {
  opacity: 0.7;
}

.social-media {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: inline-block;
}

ul {
  list-style-type: none;
  padding-inline-start: 2px;
}

li {
  float: left;
  align-content: center;
}

.social-media li a {
  display: block;
  color: white;
  text-align: center;
  padding: 15px;
  text-decoration: none;
}

li a:hover {
  opacity: 0.7;
}

#works {
  display: grid;
}

.cards {
  display: flex;
  flex-direction: column;
  padding: 16px;
  width: 327px;
  height: 552px;
  background: #fff;
  border: 1px solid #dfe1e6;
  box-sizing: border-box;
  border-radius: 16px;
  margin: 40px 12px;
}

#first-card-item {
  margin-top: 50px;
}

#snapshot1 {
  width: 295px;
  height: 230px;
  left: 16px;
  top: 16px;
  background: url("./utils/first-card.png");
  border-radius: 8px;
  margin: auto;
  background-size: cover;
}

.card-heading {
  width: 295px;
  height: 36px;
  font-style: normal;
  font-weight: bold;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
  margin-top: 12px;
  margin-bottom: 12px;
}

.card-list {
  display: flex;
  justify-content: space-between;
  margin-right: 30px;
}

.item {
  margin-top: 5px;
}

.client {
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  color: #344563;
}

.role {
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  color: #7a869a;
}

.year {
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  color: #7a869a;
}

.card-main {
  font-style: normal;
  font-weight: normal;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
  order: 1;
  margin-top: 12px;
  margin-bottom: 12px;
}

.language-list {
  display: flex;
  justify-content: flex-start;
  padding-inline-start: 2px;
}

.language-container {
  float: left;
  justify-content: center;
  align-content: center;
  padding: 5px 12px;
  background: #ebebff;
  border-radius: 8px;
  margin-right: 10px;
}

.language-text {
  font-size: 12px;
  letter-spacing: 0.03em;
  color: #6070ff;
}

.card-footer {
  margin-top: 25px;
  padding-bottom: 25px;
}

.card-button {
  font-size: 17px;
  line-height: 24px;
  display: flex;
  align-items: center;
  text-align: center;
  letter-spacing: 0.03em;
  color: #396df2;
  border: 1px solid #6070ff;
  box-sizing: border-box;
  border-radius: 8px;
  height: 48px;
  background-color: #fff;
  transition: color 4s, border 8s;
}

.card-button:hover {
  background-color: whitesmoke;
  color: #000;
  border: 2px solid #000;
}

#snapshot2 {
  width: 295px;
  height: 230px;
  left: 16px;
  top: 16px;
  background: url("./utils//card-image.png");
  border-radius: 8px;
  margin: auto;
  background-size: cover;
}

#snapshot3 {
  width: 295px;
  height: 220px;
  left: 16px;
  top: 16px;
  background: url("./utils/card-image-2.png");
  border-radius: 8px;
  background-size: cover;
}

#snapshot4 {
  position: static;
  width: 295px;
  height: 220px;
  left: 16px;
  top: 16px;
  background: url("./utils//card-image-3.png");
  border-radius: 8px;
  margin-top: 12px;
  margin-bottom: 12px;
  background-size: cover;
}

#about-me {
  background-image: url("./utils/about-me-background.svg");
  margin-top: 60px;
}

.about-header {
  font-style: normal;
  font-weight: bold;
  font-size: 40px;
  line-height: 52px;
  align-items: center;
  color: #172b4d;
  margin: 12px 12px;
  padding-top: 80px;
}

.about-text {
  margin-left: 12px;
  margin-right: 16px;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
}

#second-link {
  margin-left: 12px;
}

#second-social-media {
  top: 20px;
}

#about-button {
  margin-left: 8px;
}

.base-list {
  display: flex;
  flex-direction: column;
  margin-left: 10px;
  margin-right: 20px;
}

.list-item {
  font-style: normal;
  font-weight: 500;
  font-size: 20px;
  line-height: 24px;
  display: flex;
  flex-direction: column;
  padding: 25px 5px;
  color: #000;
  border-bottom: 1px solid #dfe1e6;
}

#dropdown-menu {
  padding-top: 5px;
  background-color: #fff;
}

.list-item-inserted {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-right: 10px;
}

.fa-chevron-right {
  color: #acb7c3;
  font-size: 0.73em;
}
/* ... */

